--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -3,9 +3,6 @@ CC			:= cc
 CFLAGS		:= -Wall -Wextra -Werror -fsanitize=thread -g
 RM			:= rm -rf
 
-### dirs
-OBJS_DIR	:= obj
-
 ### Executable Name
 NAME		:= philo_bonus
 
@@ -38,13 +35,10 @@ $(NAME): $(OBJS)
 	@$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
 	@echo "$(RED)$(BOLD)$(NAME) $(GREEN)compiled successfully!$(RESET)"
 
-$(OBJS_DIR)/%.o: %.c include_bonus/philo_bonus.h | $(OBJS_DIR)
+$(OBJS_DIR)/%.o: %.c include_bonus/philo_bonus.h
 	@mkdir -p $(dir $@)
 	@$(CC) $(CFLAGS) -c $< -o $@
 	@echo "$(BLUE)Compiling: $(WHITE)$<$(RESET)"
-
-$(OBJS_DIR):
-	@mkdir -p $(OBJS_DIR)
 
 clean:
 	@$(RM) $(OBJS_DIR)
@@ -55,5 +49,3 @@ fclean:
 	@echo "$(RED)$(UP)Cleaned object files and $(PURPLE)$(BOLD)$(LIBFT)$(RESET)$(RED), $(RED)$(BOLD)$(NAME)$(RESET)"
 
 re: fclean all
-
-.PHONY: clean fclean
